[tool.poetry]
name = "mesa_data_importer"
version = "0.2.0"
description = "A Python package to import files from the MESA dataset."
authors = [
    "Daniel Krauß <daniel.k.krauss@fau.de>",
    "Robert Richer <robert.richer@fau.de>"
]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
numpy = "^1.22.0"
pandas = "^1.4.1"
mne = "^1.2.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
